# codex-remote-feishu

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER.md  Makefile  QUICKSTART.md  README.md  eslint.config.js  go.mod  go.sum  install-release.ps1  install-release.sh  install.sh  package-lock.json  package.json  setup.ps1  setup.sh  upgrade-local.sh
.factory/: services.yaml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: release-tracker.yml  work-item.yml
.github/workflows/: ci.yml  dev-release.yml  installer-smoke.yml  release-from-tracker.yml  release.yml
bot/: package.json  vitest.config.ts
bot/src/: bot-service.test.ts  bot-service.ts  commands.test.ts  commands.ts  feishu.test.ts  feishu.ts  formatter.test.ts  formatter.ts  index.ts  integration-core-flows.test.ts  integration-test-setup.test.ts  integration-test-setup.ts  relay.test.ts  relay.ts  vitest.global-setup.ts
cmd/codex-remote/: main.go
docs/: README.md  app-server-redesign.md  feishu-im-message-research.md  feishu-product-design.md  implementation-change-inventory.md  install-deploy-design.md  relay-error-reporting-protocol.md  relay-protocol-spec.md  web-admin-setup-redesign-plan.md
server/: package.json
web/: index.html  vite.config.ts
wrapper/: Cargo.toml
wrapper/src/: config.rs  main.rs  proxy.rs  ws_client.rs
wrapper/tests/: stdio_proxy_test.rs  ws_client_proxy_test.rs
wrapper/tests/fixtures/: mock_codex_echo.sh  mock_codex_emit_final_turn_completed.py  mock_codex_exit.sh  mock_codex_signal.sh  mock_codex_stdin_eof.sh  mock_codex_trailing_output_after_exit.py
(+1438 files in other folders)
